# ChangeLog for sys-apps/lm_sensors
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*lm_sensors-3.1.0 (12 Jun 2009)

  12 Jun 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
  +lm_sensors-3.1.0.ebuild,
  +files/lm_sensors-3.1.0-sensors-detect-gentoo.patch,
  +files/lm_sensors-3-init.d, +files/fancontrol-init.d,
  +files/sensord-conf.d, +files/sensord-init.d, +metadata.xml:
  bump
