@@ -1,9 +1,9 @@
 AUX fancontrol-init.d 726 RMD160 444eedc0044a61e0a79d79565e6399156b8f9b9c SHA1 aabcdaf530f6d49f3de01e9b6d78470c6538ff38 SHA256 b231b76d5b32bb303a8e42727f48a4405cec71eedfe392e837acba5e46532783
 AUX lm_sensors-3-init.d 2466 RMD160 54b58e00914e9c1f8b21e6a73cc215335d9dd647 SHA1 6250e4e28cd936efa6d05846b16175e85fe821c5 SHA256 9b018f9f7a0975988387858823fe59a5cd8af6413d8c3170db0e24aac6021ec3
-AUX lm_sensors-3.1.0-sensors-detect-gentoo.patch 4398 RMD160 5ba45089ad7d121b35dbef1135cbe01b8f2044ce SHA1 f1275d018bc83a17cdf150c14abb7797504c29b7 SHA256 39ea40f3017c16fc459a41ebd2b4eb105208ceaae895f2e2384c10557cd7e0ce
+AUX lm_sensors-3.1.1-sensors-detect-gentoo.patch 4398 RMD160 5ba45089ad7d121b35dbef1135cbe01b8f2044ce SHA1 f1275d018bc83a17cdf150c14abb7797504c29b7 SHA256 39ea40f3017c16fc459a41ebd2b4eb105208ceaae895f2e2384c10557cd7e0ce
 AUX sensord-conf.d 104 RMD160 c4a06a8492d6c0fd966dea64d92f798a9b716a92 SHA1 43090c58c918969caa359d3b6e89237585759f46 SHA256 02230edf5efbb0a4de3840cd76f9ebf431c57a246fa7388e9dbeb0fe26fe7b8d
 AUX sensord-init.d 708 RMD160 31e5a4ac844333bc9689346bb68c206ded13f1a3 SHA1 45dd30ba6d158022e8290ea9b09fd2a1053c5b58 SHA256 9f6d0e7bcdc1b4b3bc0835b40f246f7caf76e1b3bbfcf76a5d5b235eb8243d89
-DIST lm_sensors-3.1.0.tar.bz2 153816 RMD160 70484386f4af520ff99acf2c0ed7feda9fea52d8 SHA1 b36577ca07d3028910a93958e5809ba7b85e0bf8 SHA256 45e1a684af40b674453f92c8c193a89cd6d689306ec9ae3a6b2575c0b6a5e412
-EBUILD lm_sensors-3.1.0.ebuild 3135 RMD160 b38454d1391171571f7bf03eaf35398f2a6bb82e SHA1 809ff617c0f0174fb6cca658b3a65459a7363af8 SHA256 c0a942913dc46106b12cbcdf3c04507f672d1fbe7cf12cb603698c6dcee99646
-MISC ChangeLog 420 RMD160 e7d4b18d3f3a1264865c22c49b9ed6a264fe0f65 SHA1 559fc1cffe4fd1a209149e695cc0ca9877ca3162 SHA256 3400add441826aa32b1b06208c37ed83be4097af3cb676c850306680fd1b7d4a
+DIST lm_sensors-3.1.1.tar.bz2 154551 RMD160 7a333f42f598ee8366f70157037c63ebb5b33387 SHA1 8be15806d229305491f11b77c67496074480faf4 SHA256 d95a3f2a6526f4da2ae145b7bbf45d16f0fb17bfe0d2017c7e02964199d059ef
+EBUILD lm_sensors-3.1.1.ebuild 3332 RMD160 502342edd4cdb0bf2e41ed857b0941a20bb6fabd SHA1 4d4cfc917aa793548d054b3c2d6907786c0e213b SHA256 0a2f6080cacc53b9886ba1fe09f9bf0e142f3c2b39c1fdd46d6a6ae2ec7f4a89
+MISC ChangeLog 659 RMD160 88443e5c7c989313d2a6ed7a5eed3bff821a49a5 SHA1 2dfffc00fbe7e9a1dba6f845093980def8ff92cd SHA256 81a7bd4a742cada589b2bcf03d76cf21a3271318204dd7db61d0cd910e5caf3d
 MISC metadata.xml 328 RMD160 102d79ccb2dfd783b5d5baf50f5ac633d915f712 SHA1 b19178b1ba16d245cd04ea70c9532ee8dc37097c SHA256 aa83681ad6865347f45c3911d408b253ab27e43bf0e3f0e58624a2b4958b425b
