@@ -2,6 +2,13 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Aug 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
+  -lm_sensors-3.1.0.ebuild,
+  -files/lm_sensors-3.1.0-sensors-detect-gentoo.patch,
+  +lm_sensors-3.1.1.ebuild,
+  +files/lm_sensors-3.1.1-sensors-detect-gentoo.patch:
+  version bump
+
 *lm_sensors-3.1.0 (12 Jun 2009)
 
   12 Jun 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
